[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accesser"
version = "0.10.0"
authors = [
  { name="URenko" },
]
description = "ðŸŒä¸€ä¸ªè§£å†³SNI RSTå¯¼è‡´ç»´åŸºç™¾ç§‘ã€Pixivç­‰ç«™ç‚¹æ— æ³•è®¿é—®çš„å·¥å…· | A tool for solving SNI RST"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    'packaging',
    'cryptography',
    'tld',
    'dnspython >= 2.7',
    'tomli >= 1.1.0 ; python_version < "3.11"'
]

[project.optional-dependencies]
doh = ["dnspython[doh]"]
doq = ["dnspython[doq]"]

[project.scripts]
accesser = "accesser:run"

[project.urls]
"Homepage" = "https://github.com/URenko/Accesser"
"Bug Tracker" = "https://github.com/URenko/Accesser/issues"

[tool.setuptools.package-data]
accesser = ["*.toml", "pac"]
